@@ -1,3 +1,7 @@
+2008-04-17  Ales Hakl  <ales at hakl dot net>
+
+	* lib/regex_mod.c (native_regex_match_once_p): missing dfsch_bool()
+
 2008-04-14  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch__get_thread_info): use __thread on gcc
